Soma detection: Support multiple somata